# flappy-bird-python

./: .gitignore  README.md  custom_template.tmpl  difficulty.py  main.py  package-lock.json  pyproject.toml  sound_effects.py  theme_changer.py
.github/workflows/: deploy-to-pages.yml
sounds/: game_over.ogg.bak  wing_flap.ogg.bak
