[project]
name = "flappy-bird-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pygame-ce>=2.4.0",
    "pygbag>=0.9.2",
]

[project.optional-dependencies]
web = [
    "pygbag>=0.8.0",
]

[tool.pygbag]
cdn = "https://pygame-web.github.io/archives/repo/"
